<resources>
    <string name="app_name">Join M3!</string>
    <string name="title_activity_register_user">register_user</string>
    <string name="reg_name">Name</string>
    <string name="reg_password">Enter password</string>
    <string name="reg_enter">Create account</string>
    <string name="tab_text_1">Register</string>
    <string name="tab_text_2">Sign in</string>
    <string name="tab_text_3">Activities</string>
    <string name="tab_text_4">Map</string>
    <string name="tab_text_5">Current activities</string>
    <string name="tab_text_6">Previous activities</string>
    <string name="tab_text_7">Request Notification</string>
    <string name="tab_text_8">Status Notification</string>
    <string name="sign_in">Sign in</string>
    <string name="let_s_get_you_started">Let\'s get you started</string>
    <string name="login_page_view">Login page</string>
    <string name="description">Description</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="quick_access_with">Quick access with</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_back">Welcome back</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title_activity_maps">Map</string>
    <string name="tab_text_all_act1">Favourite activities</string>
    <string name="tab_text_all_act2">All activities</string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Profile</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="activity_name">Activity name</string>
    <string name="create_activity">Create activity</string>
    <string name="choose_category">Category</string>
    <string name="location">Location</string>
    <string name="activity_title">Activity title</string>
    <string name="activity_description">Activity description</string>
    <string name="private_event">Private event</string>
    <string name="initial_count">0</string>
    <string name="peoples">Peoples</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="join_notification_text">%1$s wants to join your activity %2$s.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_activities">Current Activities</string>
    <string name="friends">Friends</string>
    <string name="messages">Messages</string>
    <string name="history">History</string>
    <string name="favorites">Favorites</string>
    <string name="about_text">
        "This is a group app\n\n"
        "Authors:\n"
        "name: Jakob Ewerstrand, CID: jakobew\n"
        "name: Arsenije Zinga, CID: arsenije\n"
        "name: Johan Ek, CID: ekjoh, Git: MiztaOak\n"
        "name: Alex Tang, CID: alexta\n"
        "name: Gabriel Javebrink, CID: gabjav\n"
        "name: Oussama Anadani, CID: anadani\n"
        "name: Jennie Zhou, CID: jenzho\n"
        "\n\n"
    </string>
    <string name="about">About</string>
    <string name="my_activities">My activities</string>
    <string name="logout">Logout</string>
    <string name="activity_feed">Activity feed</string>
    <string name="notifications">Notifications</string>
    <string name="name">[Name]</string>
    <string name="time">[time]</string>
    <string name="hint">hint</string>
    <string name="todo">TODO</string>
    <string name="write_a_message">Write a message ...</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="profile_description">Profile description</string>
    <string name="user_information">User information</string>
    <string name="j">J</string>
</resources>
