<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_feed">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_activities"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/current_activities" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/messages" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/about" />
        <item android:id="@+id/nav_logout"
            android:title="@string/logout" />


    </group>
</menu>
