<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pic"
    android:focusableInTouchMode="true"
    tools:context=".view.loginPage.LoginPageFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/welcome_text"
            android:fontFamily="@font/gotham_regular"
            android:gravity="center_horizontal"
            android:textColor="#000000"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSignInBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#0E0E0E"
            android:theme="@style/EditScreenTextInputLoginStyle">

            <EditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_email_black_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#0E0E0E"
            android:theme="@style/EditScreenTextInputLoginStyle">

            <EditText
                android:id="@+id/sign_up_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_account_black_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri_regular"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#0E0E0E"
            android:theme="@style/EditScreenTextInputLoginStyle">

            <EditText
                android:id="@+id/sign_up_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_phone_black_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri_regular"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#0E0E0E"
            android:theme="@style/EditScreenTextInputLoginStyle">

            <EditText
                android:id="@+id/sign_up_pwd1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_lock_black_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="#0E0E0E"
                android:textColorHint="#000000"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#0E0E0E"
            android:theme="@style/EditScreenTextInputLoginStyle">

            <EditText
                android:id="@+id/sign_up_pwd2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_lock_black_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri_regular"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="#0E0E0E"
                android:textColorHint="#000000"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/terms_conditions_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/terms_and_conditions"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signlinearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="40dp"
            android:background="@drawable/login_sign"
            android:fontFamily="@font/calibri_regular"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>
