<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateActivityView" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent">

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@android:color/transparent"
                    app:srcCompat="?attr/actionModeCloseDrawable" />

                <TextView
                    android:id="@string/create_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/gotham_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/create_activity"
                    android:textColor="#000000"
                    android:textSize="25sp" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_regular"
                android:text="@string/activity_title"
                android:textColor="@color/textInputLayout"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:hint="@string/activity_title"
                android:textColorHint="@color/darkgray"
                android:theme="@style/EditScreenTextInputLoginStyle">

                <EditText
                    android:id="@+id/editTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:fontFamily="@font/calibri_regular"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/textInputLayout"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_regular"
                android:text="@string/choose_category"
                android:textColor="@color/textInputLayout"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/categoryspinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textInputLayout"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_regular"
                android:text="@string/location"
                android:textColor="@color/textInputLayout"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">


                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/description"
                    android:onClick="getLocationOnClick"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_my_location_white_24dp"
                    android:theme="@style/my_location_button_style" />

                <fragment
                    android:id="@+id/place_autocomplete_fragment"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout="@layout/places_autocomplete_fragment" />

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textInputLayout"
                android:visibility="visible" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_regular"
                android:text="@string/activity_description"
                android:textColor="@color/textInputLayout"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/darkgray"
                android:theme="@style/EditScreenTextInputLoginStyle">

                <EditText
                    android:id="@+id/editDesc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="no"
                    android:background="@drawable/black_stroke_bg"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:fontFamily="@font/calibri_regular"
                    android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
                    android:lines="8"
                    android:nestedScrollingEnabled="false"
                    android:scrollIndicators="right"
                    android:scrollbarStyle="outsideInset"
                    android:scrollbars="vertical"
                    android:textAlignment="textStart"
                    android:textColor="@color/textInputLayout"
                    android:textSize="20sp"
                    android:verticalScrollbarPosition="right" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gotham_regular"
                android:text="@string/peoples"
                android:textColor="@color/textInputLayout"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/privateCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/private_event"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/decreaseNumAttendees"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/description"
                    android:src="@drawable/ic_minus"
                    android:theme="@style/my_location_button_style" />

                <ImageButton
                    android:id="@+id/increaseNumAttendees"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/description"
                    android:src="@drawable/ic_plus"
                    android:theme="@style/my_location_button_style" />

                <EditText
                    android:id="@+id/numAttendeesEditTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:maxLines="1"
                    android:hint="Number of peoplee"
                    android:background="@android:color/transparent"
                    android:textColorHint="@color/darkgray"
                    android:layout_centerVertical="true"
                    android:textSize="20sp" />
            </RelativeLayout>

            <View
                android:id="@+id/divider4"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/textInputLayout"
                android:visibility="visible" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gotham_regular"
                android:text="@string/date_amp_time"
                android:textColor="@color/textInputLayout"
                android:textSize="16sp" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />
            </LinearLayout>

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/textInputLayout"
                android:visibility="visible" />

        </LinearLayout>

        <Button
            android:id="@+id/createActivityButton"
            android:layout_width="145dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/buttonshapewhitebg"
            android:fontFamily="@font/calibri_regular"
            android:text="@string/create_activity"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>